--- a/Evvy/style.css
+++ b/Evvy/style.css
@@ -286,6 +286,7 @@
 		transform: scale(1.05); /* Add a slight zoom effect on hover */
   		box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); /* Add shadow on hover */
 	}
+
 	.sectors a {
 		text-decoration: none;
 		color: black
@@ -361,7 +362,7 @@
 
 	
 	.sector-detail {
-		padding:15vw 0vw;
+		padding:15vw 0vw 10vw 0vw;
 		font-family: 'Manrope';
 	}
 	.sector-detail h2{
@@ -397,9 +398,8 @@
 	.sector-detail .content li {
 		margin: 0.15vw 0vw;
 	}
-	.sector-detail .relevant-services-row {
-		display: flex;
-		gap: 2vw;
+	.sector-detail .relevant-services{
+		margin-top: 8vw
 	}
 
 
