--- a/Evvy/style-responsive.css
+++ b/Evvy/style-responsive.css
@@ -194,6 +194,19 @@
   .sectors .container .item h4 {
 	font-size:2.5vw
   }
+
+  .sector-detail .container {
+	padding: 10vw 25px;
+  }
+  .sector-detail .breadcrumb {
+	font-size: smaller;
+  }
+  .sector-detail .content {
+	margin: 7vw 0vw;
+  }
+  .sector-detail .relevant-services h3 {
+	font-size: larger;
+  }
  
 
   .for-section .container .items_wrapper .item h4 {
@@ -420,6 +433,13 @@
   }
   .sectors .container .item h4 {
 	font-size:4.5vw
+  }
+
+  .sector-detail .container h2 {
+	font-size:6vw;
+  }
+  .sector-detail .container {
+	padding: 15vw 25px;
   }
 
 	.service_items .item{
